adjustments in caption of comodi and masymos pictures

--- a/tex/background-diff.tex
+++ b/tex/background-diff.tex
@@ -203,7 +203,7 @@
 	\begin{figure}[h]
 		\centering
 		\includegraphics[width=\textwidth,keepaspectratio]{resources/comodi-overview.pdf}
-		\caption[Visualisation of \comodi]{Visualization of all classes of the \comodi ontology, taken from \citet{Scharm2016}. \url{http://purl.uni-rostock.de/comodi/2016-03-12}}
+		\caption[Visualisation of \comodi]{Visualization of all classes of the \comodi ontology, taken from \citealt{Scharm2016}. \url{http://purl.uni-rostock.de/comodi/2016-03-12}}
 		\label{fig:background:onto:comodi}
 	\end{figure}
 	
