--- a/tex/background-repos.tex
+++ b/tex/background-repos.tex
@@ -131,10 +131,10 @@ In addition to explicit links, the graph database back-end of \masymos allows to
 Further, to allow easy upwards traversal, all relations also feature a common relation to the next higher node in hierarchy, called \texttt{belongs\_to}.
 
 \todo{paragraph about shortcomings}
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{resources/masymos_struc_figure2.eps}
-	\caption{Structure representing \sbml and \cellml models in \masymos. Figure taken from \citealt{Henkel2015}}
+	\caption{Structure representing \sbml and \cellml models in \masymos. Figure taken from \citealt{Henkel2015}.}
 	\label{fig:background:graph-db:masymos}
 \end{figure}
 
