moved lof (list of figure) right after toc

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -49,6 +49,8 @@
 	\pagebreak
 	% the toc
 	\tableofcontents
+	% the lof
+	\listoffigures
 	
 	% set paragraph indents
 	%\setlength{\parindent}{0pt}
@@ -88,7 +90,6 @@
 	%\bibliographystyle{unsrtnat}
 	\bibliography{zotero.bib}
 	
-	\listoffigures
 	\begin{appendices}
 		\appendixpage
 		\noappendicestocpagenum
