added basic cellml paper

--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -1258,6 +1258,34 @@ Contact: sysbio-team\{at\}caltech.edu},
   file = {Chacon and Straub - 2014 - Pro Git.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/BMZUX7C2/Chacon and Straub - 2014 - Pro Git.pdf:application/pdf}
 }
 
+@misc{zotero-null-243,
+  title = {New {{Tab}}},
+  timestamp = {2016-11-06T19:07:03Z},
+  urldate = {2016-11-06},
+  url = {about:newtab},
+  file = {New Tab:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/HGG22BHJ/newtab.html:application/xhtml+xml}
+}
+
+@article{Cuellar2003,
+  title = {An {{Overview}} of {{CellML}} 1.1, a {{Biological Model Description Language}}},
+  volume = {79},
+  issn = {0037-5497, 1741-3133},
+  doi = {10.1177/0037549703040939},
+  abstract = {CellML is an XML-based exchange format developed by the University of Auckland in collaboration with Physiome Sciences, Inc. CellML 1.1 has a component-based architecture allowing a modeller to build complex systems of models that expand and reuse previously published models. CellML Metadata is a format for encoding contextual information for a model. CellML 1.1 can be used in conjunction with CellML Metadata to provide a complete description of the structure and underlying mathematics of biological models. A repository of over 200 electrophysiological, mechanical, signal transduction, and metabolic pathway models is available at www.cellml.org.},
+  language = {en},
+  timestamp = {2016-11-06T19:15:47Z},
+  number = {12},
+  urldate = {2016-11-06},
+  url = {http://sim.sagepub.com/content/79/12/740},
+  journal = {SIMULATION},
+  author = {Cuellar, Autumn A. and Lloyd, Catherine M. and Nielsen, Poul F. and Bullivant, David P. and Nickerson, David P. and Hunter, Peter J.},
+  month = jan,
+  year = {2003},
+  keywords = {Biological model,markup language,mathematical model,XML},
+  pages = {740--747},
+  file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/WKMBXWM5/Cuellar et al. - 2003 - An Overview of CellML 1.1, a Biological Model Desc.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/7K72M3DE/740.html:text/html}
+}
+
 @comment{jabref-meta: groupsversion:3;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
@@ -1273,7 +1301,7 @@ ri2011\;Smith2007\;Ashburner2000\;Prinz2011\;Bergmann2014\;Bergmann201
 er2009\;Berners-Lee2001\;Berners-Lee2001a\;Shadbolt2006\;Bechhofer2004
 \;Robinson2013\;Collins-Sussman2004\;Spinellis2005\;Hussey1976\;Hussey
 1976a\;Spinellis2005a\;OSullivan2009\;Beard2009\;Hucka2003\;Miller2011
-\;Chacon2014\;;
+\;Chacon2014\;Cuellar2003\;;
 1 ExplicitGroup:zotero-stuff\;0\;Chemiker\;zotero-null-25\;;
 }
 
