added kind of a finish sentence

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -27,7 +27,13 @@ To integrate also \texttt{Reason} and \texttt{Intention} in the annotations, fur
 Both are a imaginable features for a version of this diff-database project, adjusted for the use as personal VCS, opposed to initial statement.
 Mentioned information could also be conceived by coupling this project with an existing VCS like Git or an data sharing platform like SEEK\footnote{\url{http://seek4science.org/}}.
 
-\todo{find a nice ending?}
+Concluding I believe, that the basic design, explored in this thesis, has the potential to help solving the essential problem of reproducibility. The database design lays a solid foundation to increase transparency and therefore reproducibility by allowing users and third party tools to explore the evolution of a model with all external links \masymos already provides. In addition with \comodi-annotations common changes or trends could be detected.
+Further search engines could suggest which version matches best the requirements of the user, instead of only returning the newest version. These requirements may be a specific species or compatibility to a \sedml script or another model.
+
+All in all is this work just as good as the supplied data, therefore it is important to facilitate cooperations and interlink more and more open data.
+
+\todo{find a nice(r) ending?}
+\begin{comment}
 \todo{incorporate former outlook section}
 \begin{itemize}
 	\item outlook
@@ -35,6 +41,7 @@ Mentioned information could also be conceived by coupling this project with an e
 	\subsubitem "Incremental Query Evaluation. When a user has a standing query against a time-varying data source, a change-detection tool can provide the query engine the delta data on which the query will be re-evaluated. Thus, the user doesn’t receive old results and the query engine avoids repeated work. Since the delta data is usually much smaller than the original data, query evaluation will also be much faster." \citep{Wang2003}
 	\subitem detecting similar changes on different models
 \end{itemize}
+\end{comment}
 
 \begin{comment}
 \begin{itemize}
