--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -1286,6 +1286,75 @@ Contact: sysbio-team\{at\}caltech.edu},
   file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/WKMBXWM5/Cuellar et al. - 2003 - An Overview of CellML 1.1, a Biological Model Desc.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/7K72M3DE/740.html:text/html}
 }
 
+@misc{zotero-null-249,
+  timestamp = {2016-11-09T13:01:26Z},
+  urldate = {2016-11-09},
+  url = {https://scholar.googleusercontent.com/scholar.bib?q=info:IzqN-uHMMqYJ:scholar.google.com/\&output=citation\&scisig=AAGBfm0AAAAAWCMgbbtlBKPvDhOX6TxLa5nd9WffikrT\&scisf=4\&ct=citation\&cd=-1\&hl=de},
+  annote = {
+@article\{bray1998extensible, title=\{Extensible markup language (XML)\}, author=\{Bray, Tim and Paoli, Jean and Sperberg-McQueen, C Michael and Maler, Eve and Yergeau, Fran\{$\backslash$c\{c\}\}ois\}, journal=\{World Wide Web Consortium Recommendation REC-xml-19980210. http://www. w3. org/TR/1998/REC-xml-19980210\}, volume=\{16\}, pages=\{16\}, year=\{1998\} \}
+},
+  file = {scholar.asc:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/54TT975J/scholar.asc:text/plain}
+}
+
+@article{Bray1998,
+  title = {Extensible Markup Language ({{XML}})},
+  volume = {16},
+  abstract = {The Extensible Markup Language (XML) is a subset of SGML that is completely described in this document.
+Its goal is to enable generic SGML to be served, received, and processed on the Web in the way that is
+now possible with HTML. XML has been designed for ease of implementation and for interoperability
+with both SGML and HTML.},
+  language = {English},
+  timestamp = {2016-11-09T13:06:36Z},
+  urldate = {2016-11-09},
+  url = {http://www.w3.org/TR/1998/REC-xml-19980210},
+  journal = {World Wide Web Consortium Recommendation},
+  author = {Bray, Tim and Paoli, Jean and Sperberg-McQueen, C Micheal and Maler, Eve and Vergeau, Fran{\c c}ois and Cowan, John},
+  year = {1998},
+  pages = {16},
+  file = {Bray et al. - 1998 - Extensible markup language (XML).pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/B4KCIVQP/Bray et al. - 1998 - Extensible markup language (XML).pdf:application/pdf}
+}
+
+@book{Lassila1998,
+  title = {Resource {{Description Framework}} ({{RDF}}) {{Model}} and {{Syntax Specification}}},
+  abstract = {This document is a revision of the public working draft dated 1998-08-19 incorporating suggestions received in review comments and further deliberations of the W3C RDF Model and Syntax Working Group. With the publication of this draft, the RDF Model and Syntax Specification enters "last call." The last call period will end on October 23, 1998. Comments on this specification may be sent to www-rdf-comments@w3.org. The archive of public comments is available at http://www.w3.org/Archives/Public/www-rdf-comments. Significant changes from the previous draft are highlighted in Appendix E. While we do not anticipate substantial changes, we still caution that further changes are possible. Therefore while we encourage active implementation to test this specification we also recommend that only software that can be easily field-upgraded be implemented to this specification at this time. This is a W3C Working Draft for review by W3C members and other interested parties. Publication as a working draft does not imply endorsement by the W3C membership. The RDF Model and Syntax  Working Group will not allow early implementation to constrain their ability to make changes to this specification prior to final release. This is a draft document and may be updated, replaced or obsoleted by other documents at any time. It is inappropriate to cite W3C Working Drafts as other than "work in progress". This work is part of the W3C Metadata Activity.},
+  timestamp = {2016-11-09T14:52:02Z},
+  author = {Lassila, Ora and Swick, Ralph R. and Wide, World and Consortium, Web},
+  year = {1998},
+  file = {Citeseer - Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/AZG54MUB/Lassila et al. - 1998 - Resource Description Framework (RDF) Model and Syn.pdf:application/pdf;Citeseer - Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/EK2TB8V3/summary.html:text/html}
+}
+
+@article{Carlisle2003,
+  title = {Mathematical {{Markup Language}} ({{MathML}}) {{Version}} 2.0 ({{Second Edition}})},
+  abstract = {This specification defines the Mathematical Markup Language, or MathML. MathML is an XML application for describing mathematical notation and capturing both its structure and content. The goal of MathML is to enable mathematics to be served, received, and processed on the World Wide Web, just as HTML has enabled this functionality for text.
+
+This specification of the markup language MathML is intended primarily for a readership consisting of those who will be developing or implementing renderers or editors using it, or software that will communicate using MathML as a protocol for input or output. It is not a User's Guide but rather a reference document.
+
+This document begins with background information on mathematical notation, the problems it poses, and the philosophy underlying the solutions MathML 2.0 proposes. MathML can be used to encode both mathematical notation and mathematical content. About thirty of the MathML tags describe abstract notational structures, while another about one hundred and fifty provide a way of unambiguously specifying the intended meaning of an expression. Additional chapters discuss how the MathML content and presentation elements interact, and how MathML renderers might be implemented and should interact with browsers. Finally, this document addresses the issue of MathML characters and their relation to fonts.
+
+While MathML is human-readable, it is anticipated that, in all but the simplest cases, authors will use equation editors, conversion programs, and other specialized software tools to generate MathML. Several versions of such MathML tools already exist, and a number of others, both freely available software and commercial products, are under development.},
+  timestamp = {2016-11-09T14:55:42Z},
+  urldate = {2016-11-09},
+  url = {https://www.w3.org/TR/MathML2/},
+  journal = {World Wide Web Consortium Recommendation},
+  author = {Carlisle, David and Ion, Patrick and Miner, Robert and Poppelier, Nico},
+  month = oct,
+  year = {2003},
+  file = {Carlisle et al. - 2003 - Mathematical Markup Language (MathML) Version 2.0 .pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/MEX3KN56/Carlisle et al. - 2003 - Mathematical Markup Language (MathML) Version 2.0 .pdf:application/pdf;Mathematical Markup Language (MathML) Version 2.0 (Second Edition):/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/C3QWN4GP/MathML2.html:text/html}
+}
+
+@article{DeRose2010,
+  title = {{{XML Linking Language}} ({{XLink}}) {{Version}} 1.1},
+  abstract = {This specification defines the XML Linking Language (XLink) Version 1.1, which allows elements to be inserted into XML documents in order to create and describe links between resources. It uses XML syntax to create structures that can describe links similar to the simple unidirectional hyperlinks of today's HTML, as well as more sophisticated links.},
+  timestamp = {2016-11-09T15:04:36Z},
+  urldate = {2016-11-09},
+  url = {https://www.w3.org/TR/xlink11/},
+  journal = {World Wide Web Consortium Recommendation},
+  author = {DeRose, Steve and Maler, Eve and Orchard, David and Walsh, Norman},
+  month = may,
+  year = {2010},
+  file = {XML Linking Language (XLink) Version 1.1:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/8FHM9PPK/xlink11.html:text/html}
+}
+
 @comment{jabref-meta: groupsversion:3;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
@@ -1301,7 +1370,8 @@ ri2011\;Smith2007\;Ashburner2000\;Prinz2011\;Bergmann2014\;Bergmann201
 er2009\;Berners-Lee2001\;Berners-Lee2001a\;Shadbolt2006\;Bechhofer2004
 \;Robinson2013\;Collins-Sussman2004\;Spinellis2005\;Hussey1976\;Hussey
 1976a\;Spinellis2005a\;OSullivan2009\;Beard2009\;Hucka2003\;Miller2011
-\;Chacon2014\;Cuellar2003\;;
+\;Chacon2014\;Cuellar2003\;Bray1998\;Lassila1998\;Carlisle2003\;DeRose
+2010\;;
 1 ExplicitGroup:zotero-stuff\;0\;Chemiker\;zotero-null-25\;;
 }
 
