reviewed introduction. SF

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,25 +1,32 @@
 % !TeX spellcheck = en_US
 %\section{Motivation}
 "Scientific publications have at least two goals: (i) to announce a result and (ii) to convince readers that the result is correct" \citep{Mesirov2010}.
-This paradigm has ruled the world of scientific publications since its beginnings, but the last two decades proved to provide challenges for it. With the improvement and further development of computational tools, more advanced analysis and complex computation gets available to a broader audience by software packages and tools. Now people who have no or very little background in Mathematics or Computer Science face the challenge to comply with the second point, mentioned by Mesirov. Also with increasing complexity it gets challenging to describe the complicated workflow within the word limitation of a normal publication.
-For instance biologists are now easily able to acquire large datasets form DNA or RNA sequencing, which are way to large for manual analyses. Those data needs to be sanitized, converted and condensed, to make sense out of it. Resulting publications often only pay little attention to the computational processes involved or even to the used algorithms \citep{Peng2011}.
-But why is it of such a tremendous importance to know exactly every step leading to a result? Basically this is the foundation of scientific publications and peer review. Without in-depth knowledge of the methods, the environment and the workflow it is impossible to reproduce the experiment or observation and therefore it is impossible to prove or disprove the correctness of the assumption. This inability may lead into blind trust in publications, making room for wrong or made-up scientific findings.
+This paradigm has ruled the world of scientific publications since its beginnings, but the last two decades proved to provide challenges for it. With the improvement and further development of computational tools, more advanced analysis and complex computation \todo{narrow this down or add another word} are available to a broader audience by software packages and tools. Now, people who have no or very little background in Mathematics or Computer Science face the challenge to comply with the second point mentioned by \citeauthor{Mesirov2010}. Also with increasing complexity it becomes challenging to describe the complicated workflow within the word limitation of a normal publication.
+For instance, biologists can now easily acquire large DNA or RNA sequencing datasets, which  are too large to analyze manually.
+This data first needs to be preprocessed in order to extract meaningful results. %Those data needs to be sanitized, converted and condensed, to make sense out of it.
+Very often researchers without a computer science background do not accurately describe their methodology, hence resulting findings can not accurately be reproduced \citep{Peng2011}.
+%Resulting publications often only pay little attention to the computational processes involved or even to the used algorithms \citep{Peng2011}.
+\todo{Since the work cannot be reproduced, it is not possible to build up upon the findings and therefore can be used prove the hypothesis.}
+%But why is it of such a tremendous importance to know exactly every step leading to a result? Basically this is the foundation of scientific publications and peer review. Without in-depth knowledge of the methods, the environment and the workflow it is impossible to reproduce the experiment or observation and therefore it is impossible to prove or disprove the correctness of the assumption. 
+%This inability may lead into blind trust in publications, making room for wrong or made-up scientific findings.
 Especially valuable are these information, when dealing with studies, which may not be easily independently redone, because of resource, time or financial constraints \citep{Peng2011}.
-So, how can the challenge of improving reproducibility be tackled? Mesirov \citep{Mesirov2010} suggests the introduction of a "Reproducible Research Environment", providing a set of tools "with the ability to automatically track the provenance of data, analyses, and results and to package them".
-The problem would be to develop and introduce this environment into the scientific community -- and even then, it would merely improve the situation for future publications.
+\todo{Provide the example from the Peng? guy.} \todo{emphasis one of the constraints in the expample -> time}
+Therefore ways or methods of reproducibility need to be \todo{add qualifier} addressed. \citeauthor{Mesirov2010} suggests researchers to make use of a Reproducible Research Environment, providing a set of tools "with the ability to automatically track the provenance of data, analyses, and results and to package them".
 
-What does this mean for \sysbio? \todo{State importance of models in sysbio}Models published in the scope of this field may or may not be available in standard formats. The tools used to create them, may or may not be openly available, or the they may or may not be development anymore \citep{Peng2011}.
-In a field, which relies heavily on expanding existing findings, these issues have a huge impact on how people work.
-This fact was acknowledged by a community of scientists and developers engaged in \sysbio, who want to improve the situation of sharing and distributing biological models. Hence the \combine initiative was founded, "to coordinate the development of the various community standards and formats for computational models" \citep{COMBINE}.
-Even though a standard to describe biological networks was a huge progress, it was not sufficient in terms of goal to ensure reproducibility. Therefore \citeauthor{Waltemath2011a} developed \sedml \citep{Waltemath2011a}, to share simulation experiment setups -- modeling the prior mentioned workflow of creating, sanitizing, converting, condensing, and plotting data.
+Since \sysbio is an interdisciplinary field that heavily relies on people with different academic backgrounds, it is therefore especially important to ensure the clear reproducibility and exchangebility of data.
+Models are a condensed way to represent knowledge and data and are essential to \sysbio.
+Due to the importance of models in \sysbio, it is imperative that they are reproducible and built using standard formats \citep{Drager2014}.
+It is of great importance to use standard formats because tools used to create the original model may no longer be available or supported \citep{Peng2011}.
+\todo{That is, when a model is encoded in standard formats, the possibility of at least one tool able to decode this format in future is higher.}
+Furthermore, standardization and reproducibility are needed in order expand on and share existing findings.
+To this extend the \combine initiative has been founded to "coordinate the development of the various community standards and formats for computational models" \citep{COMBINE}.
+Even though a standard to describe biological networks was successful, it was not sufficient in terms of the goal to ensure reproducibility. Therefore, \citeauthor{Waltemath2011a} developed \sedml \citep{Waltemath2011a} to share simulation experiment setups automating the workflow of creating, sanitizing, converting, condensing, and plotting data.
 
-Eventually another standard, the \ca was introduced \citep{Bergmann2014a}, to share all relevant information and data for reproduction. This standard is useful and important for sharing additional information along, like models and simulation descriptions, with a publication, but it is merely just a snapshot of a process, leading to both benefits and problems: First, it is important to freeze the setup, so it reproduces exactly the described behavior, since always linking to the newest version of the model will break the simulation description sooner or later. On the other hand, however, the model and setup do not receive any updates or adjustments, which might lead to better insights. Further, the actual development, which induced the resulting model, is not reflected -- besides basic provenance information.
-\todo{incorporate most stats}
+In addition to \sedml, the \ca was introduced by \citet{Bergmann2014a} such as to share relevant information and data regarding reproduction. This standard is useful and important for sharing additional information \citep{Bergmann2014a}. % such as basic provenance information.
+Despite the benefits of using the \ca, certain problems have arisen. For instance, a \ca is a snapshot of a complex development process. It can only ship one specific version and no references to older or newer versions are available. This is indeed desired when reproducing specific findings from a model used in a publication, but however hinders the incorporation of newer versions of models or simulation descriptions to the already existing \todo{part}.
 
-Lacking of these features, the current situation fails tremendously on transparency, since "users are often not only interested in the current value of data but also in changes" \citep{Cobena2002}.
-The objective of this thesis is therefore to investigate into a concept to store biological models in a way, where multiple versions can be accessed, queried, and compared. Further, semantical annotations of changes between these versions shall be introduced, to improve the ability to query for a version of a model by specific criteria. Consequently it will also improve the user experience for biologists seeking to build onto existing models, as the evolution of models plays an important role for them \citep{Scharm2015}.
-\todo{ref to semantic web?}
-At the time of writing, there is currently no model repository available incorporating these features. Certainly it is not goal of this work to create a new repository, but to show a concept for extending an existing database and provide a prototypical implementation of it.
+The lack of the references to older or newer versions creates a lack of transparency, since "users are often not only interested in the current value of data but also in changes" \citep{Cobena2002}. Furthermore there is currently no available model repository that is able to query and compare multiple model versions in a simple manner.
+The main goal of this thesis is therefore to investigate a concept to store biological models in such a way that multiple versions can be accessed, queried, and compared. I furthermore introduced semantical annotations of changes between model versions, by doing so I improved the ability to query for a version of a model by specific criteria. Consequently it will also improve the user experience for systems biologists seeking to build onto existing models, as the evolution of models plays an important role for them \citep{Scharm2015}.
 
 \begin{comment}
 
