--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -1355,6 +1355,38 @@ While MathML is human-readable, it is anticipated that, in all but the simplest 
   file = {XML Linking Language (XLink) Version 1.1:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/8FHM9PPK/xlink11.html:text/html}
 }
 
+@article{Drager2014,
+  title = {Improving Collaboration by Standardization Efforts in Systems Biology},
+  volume = {2},
+  doi = {10.3389/fbioe.2014.00061},
+  abstract = {Collaborative genome-scale reconstruction endeavors of metabolic networks would not be possible without a common, standardized formal representation of these systems. The ability to precisely define biological building blocks together with their dynamic behavior has even been considered a prerequisite for upcoming synthetic biology approaches. Driven by the requirements of such ambitious research goals, standardization itself has become an active field of research on nearly all levels of granularity in biology. In addition to the originally envisaged exchange of computational models and tool interoperability, new standards have been suggested for an unambiguous graphical display of biological phenomena, to annotate, archive, as well as to rank models, and to describe execution and the outcomes of simulation experiments. The spectrum now even covers the interaction of entire neurons in the brain, three-dimensional motions, and the description of pharmacometric studies. Thereby, the mathematical description of systems and approaches for their (repeated) simulation are clearly separated from each other and also from their graphical representation. Minimum information definitions constitute guidelines and common operation protocols in order to ensure reproducibility of findings and a unified knowledge representation. Central database infrastructures have been established that provide the scientific community with persistent links from model annotations to online resources. A rich variety of open-source software tools thrives for all data formats, often supporting a multitude of programing languages. Regular meetings and workshops of developers and users lead to continuous improvement and ongoing development of these standardization efforts. This article gives a brief overview about the current state of the growing number of operation protocols, mark-up languages, graphical descriptions, and fundamental software support with relevance to systems biology.},
+  language = {ENG},
+  timestamp = {2016-11-09T17:11:02Z},
+  journal = {Frontiers in Bioengineering and Biotechnology},
+  author = {Dr{\"a}ger, Andreas and Palsson, Bernhard \O{}},
+  year = {2014},
+  keywords = {model databases,model formats,modeling guidelines,network visualization,Ontologies,software support},
+  pages = {61},
+  file = {Dräger and Palsson - 2014 - Improving collaboration by standardization efforts.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/8FPTAU6M/Dräger and Palsson - 2014 - Improving collaboration by standardization efforts.pdf:application/pdf},
+  pmid = {25538939},
+  pmcid = {PMC4259112}
+}
+
+@techreport{Scharm2014a,
+  title = {The {{CombineArchiveWeb}} Application \textendash{} {{A}} Web Based Tool to Handle Files Associated with Modelling Results},
+  abstract = {Sharing in silico experiments is essential for the advance of research in computational biology. Consequently, the COMBINE archive was designed as a digital container format. It eases the management of files related to a modelling result, fosters collaboration, and ultimately enables the exchange of reproducible simulation studies. However, manual handling of COMBINE archives is tedious and error prone. We therefore developed the CombineArchiveWeb application to support scientists in promoting and publishing their research by means of creating, exploring, modifying, and sharing archives. All files are equipped with meta data and can be distributed over the Web through shareable workspaces.},
+  language = {en},
+  timestamp = {2016-11-09T19:34:34Z},
+  number = {e639v1},
+  urldate = {2016-11-09},
+  url = {https://peerj.com/preprints/639v1},
+  institution = {PeerJ PrePrints},
+  author = {Scharm, Martin and Wendland, Florian and Peters, Martin and Wolfien, Markus and Theile, Tom and Waltemath, Dagmar},
+  month = nov,
+  year = {2014},
+  file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/49M946H3/Scharm et al. - 2014 - The CombineArchiveWeb application – A web based to.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/BD3U9CAA/639v1.html:text/html}
+}
+
 @comment{jabref-meta: groupsversion:3;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
@@ -1371,7 +1403,7 @@ er2009\;Berners-Lee2001\;Berners-Lee2001a\;Shadbolt2006\;Bechhofer2004
 \;Robinson2013\;Collins-Sussman2004\;Spinellis2005\;Hussey1976\;Hussey
 1976a\;Spinellis2005a\;OSullivan2009\;Beard2009\;Hucka2003\;Miller2011
 \;Chacon2014\;Cuellar2003\;Bray1998\;Lassila1998\;Carlisle2003\;DeRose
-2010\;;
+2010\;Drager2014\;Scharm2014a\;;
 1 ExplicitGroup:zotero-stuff\;0\;Chemiker\;zotero-null-25\;;
 }
 
