--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -56,6 +56,7 @@
 	%\setlength{\parindent}{0pt}
 	%\setlength{\parskip}{12pt plus 0mm minus 3mm}
 	
+	\todo{\sysbio models -> models in \sysbio}
 	\chapter{Introduction}
 	% comment command for Dagmar (defined in shortcuts.tex)
 	%\dw{This a is comment from Dagmar}
@@ -81,6 +82,8 @@
 	\input{discussion.tex}
 	
 	%\nocite{*}
+	\nocite{Scharm2014a}
+	
 	%\bibliographystyle{apalike}
 	%\bibliographystyle{apacitep}
 	%\bibliographystyle{named}
